--- a/api/pom.xml
+++ b/api/pom.xml
@@ -105,10 +105,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-csv</artifactId>
-			<version>1.14.1</version>
-			<scope>compile</scope>
+			<groupId>dev.riddle</groupId>
+			<artifactId>ironinvoice-shared</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Test -->
