--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -23,3 +23,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  rabbitmq:
+    host: rabbitmq
+    username: dev
+    password: dev
