feat: add CSV header parsing and validation to upload process
- Implemented `parseCsvHeaders` method in `UploadService` to extract and validate headers from uploaded CSV files.
- Updated `UploadEntity` to store CSV headers as a JSONB field in the database.
- Modified database schema to include `headers` column in `uploads` table.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -100,6 +100,12 @@
 
 		<!-- Other -->
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.14.1</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
